<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_howto"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_howto" />
        <item
            android:id="@+id/nav_findtreehost"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_findTreehost" />
        <item
            android:id="@+id/nav_upcoming_plantings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_upcoming_plantings" />
        <item
            android:id="@+id/nav_my_trees"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_my_trees" />
    </group>

    <item android:title="Spread the word">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
